# DeepSafe-Australia---Multimodal-Deepfake-Australian-Slang-Harassment-Detector

./: README.md  fuse.py  make_model_card.py  pyproject.toml  train_text.py  train_vision.py  vision_explain.py
api/: main.py
app/: app.py  main.py
docker/: Dockerfile
docs/: BOSE_checklist.md
src/deepsafe_sydney/: label_tool.py  scrape_slang.py  text_explain.py  video_tools.py
tests/: test_fuse.py  test_label_tool.py  test_pipeline.py  test_placeholder.py
